# OptiRAG

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.claude/: settings.json
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  executor.py  optical_agent.py  planner.py  replanner.py  state.py  tools.py  utils.py
app/api/: documents.py  health.py  query.py  upload.py
app/core/: milvus_client.py
app/engine/: __init__.py  rag_engine.py
app/models/: document.py  request.py  response.py
docs/: deployment.md  interview-pack.md
docs/superpowers/plans/: 2026-06-14-optical-rag-assistant-plan.md
docs/superpowers/specs/: 2026-06-14-optical-rag-assistant-design.md
mcp_servers/: README.md  example_server.py
static/: index.html
static/css/: styles.css
static/js/: app.js  chat.js  markdown.js  upload.js
tests/: conftest.py  test_agent.py  test_api.py
